--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           pip install -e '.[dev]'
       - name: Lint with Ruff
         run: |
-          ruff --output-format=github rav2
+          ruff check --output-format=github rav2
 
   mypy:
     runs-on: ubuntu-latest
