--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,6 +64,7 @@ jobs:
         run: mypy
 
   publish:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs:
       - pytest
